<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello_World</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="brightness">brightness</string>
    <string name="planet_name_label">Planet Name: </string>
    <string name="Planet_mass_label">Planet Mass: </string>
    <string name="Planet_gravity_label">Planet Gravity: </string>
    <string name="Planet_colonies_label">Planet Colonies: </string>
    <string name="planet_population_label">Planet Population: </string>
    <string name="Planet_Military_label">Planet Military: </string>
    <string name="Planet_Bases_label">Planet Bases: </string>
    <string name="Planet_Forcefield_label">Planet Forcefield: </string>

</resources>
